<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/background_blue">

        <TextView
            android:id="@+id/home_tv_title"
            style="@style/title_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/fragment_home_banner_height">

                <android.support.v4.view.ViewPager
                    android:id="@+id/home_vp_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/home_layout_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_top"
                android:layout_marginLeft="@dimen/common_small"
                android:layout_marginRight="@dimen/common_small"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/home_btn_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/home_message"
                    style="@style/fragment_home_btn"
                    android:text="@string/home_message"/>

                <TextView
                    android:id="@+id/home_btn_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/home_address"
                    style="@style/fragment_home_btn"
                    android:text="@string/home_address"/>

                <TextView
                    android:id="@+id/home_btn_driver"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/home_driver"
                    style="@style/fragment_home_btn"
                    android:text="@string/home_driver"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_small"
                android:layout_marginRight="@dimen/common_small"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/home_btn_wallet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/home_wallet"
                    style="@style/fragment_home_btn"
                    android:text="@string/home_wallet"/>

                <TextView
                    android:id="@+id/home_btn_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/home_order"
                    style="@style/fragment_home_btn"
                    android:text="@string/home_order"/>

                <TextView
                    android:id="@+id/home_btn_help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/home_help"
                    style="@style/fragment_home_btn"
                    android:text="@string/home_help"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/home_btn_order_truck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_top"
                android:layout_marginRight="@dimen/common_small"
                android:layout_marginLeft="@dimen/common_small"
                android:background="@drawable/tab_setting_background"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/common_small"
                    android:drawableLeft="@drawable/home_order_truck"
                    android:text="@string/home_order_truck"
                    android:textColor="@color/font_blue"
                    android:textSize="@dimen/fragment_home_order_truck_text_size"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_line"
                    android:layout_alignParentBottom="true"
                    android:background="@color/background_blue" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>