<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".view.activity.RechargeActivity">

    <RelativeLayout
        android:id="@+id/recharge_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/background_blue">

        <LinearLayout
            android:id="@+id/recharge_btn_back"
            android:layout_width="@dimen/title_btn_width"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/recharge_tv_title"
            style="@style/title_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_recharge" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/recharge_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recharge_info_height"
        android:layout_below="@+id/recharge_title"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="@dimen/common_margin_top"
        android:background="@drawable/rect_border"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recharge_tv_bank_card"
                style="@style/common_font"
                android:layout_width="@dimen/recharge_info_tv_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_small"
                android:text="@string/recharge_bank_card" />

            <EditText
                android:id="@+id/recharge_et_bank_card"
                style="@style/common_font_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/recharge_tv_bank_card"
                android:background="@null"
                android:hint="@string/recharge_bank_card_hint"
                android:inputType="number" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_line"
            android:layout_marginLeft="@dimen/fragment_withdraw_info_tv_width"
            android:background="@color/common" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recharge_tv_amount"
                style="@style/common_font"
                android:layout_width="@dimen/recharge_info_tv_width"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_small"
                android:text="@string/recharge_amount" />

            <EditText
                android:id="@+id/recharge_et_amount"
                style="@style/common_font_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/recharge_tv_amount"
                android:background="@null"
                android:hint="@string/recharge_amount_hint"
                android:inputType="numberDecimal" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recharge_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_below="@+id/recharge_info"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="@dimen/common_margin_top"
        android:background="@drawable/rect_fill"
        android:gravity="center">

        <TextView
            style="@style/common_font_btn_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </LinearLayout>

</RelativeLayout>
